# gitatp

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/gitatp/: git_http_backend.py
