[project]
name = "gitatp"
version = "0.1.0"
description = "Git over ATproto"
long_description_content_type = "text/markdown"
long_description = file: README.md
readme = "README.md"
authors = [
    { name = "John Andersen", email = "johnandersen777@protonmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
gitatp = "gitatp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
